--- a/src/main/resources/templates/friend/message.html
+++ b/src/main/resources/templates/friend/message.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>친구 | 함께해Young</title>
+    <title>메세지 작성 | 함께해Young</title>
     <link data-n-head="ssr" rel="preload" as="style"
-        href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css">
-    <link rel="stylesheet" href="/css/header-footer.css">
-    <link rel="stylesheet" href="/css/friend/friend-message.css">
+          href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/message/write.css">
+    <link rel="stylesheet" href="/css/header-footer.css"></link>
+    <link rel="icon" href="/images/favicon.ico">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
     </style>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="/js/message/write.js"></script>
+    <script src="/js/header-footer.js"></script>
 </head>
 
 <body>
