--- a/src/main/resources/static/css/header-footer.css
+++ b/src/main/resources/static/css/header-footer.css
@@ -757,6 +757,11 @@ header {
     position: relative;
 }
 
+.profile-img {
+    width: 100%;
+    height: 100%;
+}
+
 .mobile-detail-header-con {
     display: none;
     flex-direction: row;
