메시지 매퍼 업데이트

--- a/src/main/resources/templates/message/write.html
+++ b/src/main/resources/templates/message/write.html
@@ -8,7 +8,7 @@
     <link data-n-head="ssr" rel="preload" as="style"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/message/message-write.css">
+    <link rel="stylesheet" href="/css/message/write.css">
     <link rel="stylesheet" href="/css/header-footer.css"></link>
     <link rel="icon" href="/images/favicon.ico">
     <style>
@@ -16,7 +16,7 @@
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
     </style>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    <script src="/js/message/message-write.js"></script>
+    <script src="/js/message/write.js"></script>
     <script src="/js/header-footer.js"></script>
 </head>
 
