--- a/src/main/resources/templates/message/detail.html
+++ b/src/main/resources/templates/message/detail.html
@@ -8,7 +8,7 @@
     <link data-n-head="ssr" rel="preload" as="style"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/message/message-view-detail.css">
+    <link rel="stylesheet" href="/css/message/detail.css">
     <link rel="stylesheet" href="/css/header-footer.css"></link>
     <link rel="icon" href="/images/favicon.ico">
     <style>
