--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -8,6 +8,7 @@
     <link data-n-head="ssr" rel="preload" as="style"
           href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/header-footer.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="icon" href="/images/favicon.ico">
     <style>
