조남호 - 마이페이지 75% 작업완료

--- a/src/main/resources/templates/member/my-page.html
+++ b/src/main/resources/templates/member/my-page.html
@@ -157,13 +157,13 @@
                             </div>
                         </div>
                         <div class="numReplyContainer">
-                            0개
+                            <span th:text="${replyCount} + '개'"></span>
                             <div class="numReplyTitle">
                                 나의 댓글
                             </div>
                         </div>
                         <div class="numScheduleContainer">
-                            0개
+                            <span th:text="${participationCount} + '개'"></span>
                             <div class="numScheduleTitle">
                                 나의 일정
                             </div>
