--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -36,7 +36,8 @@
                                 <br><br>
                             </div>
                         </div>
-                        <a class="login-btn-wrapper" href="https://kauth.kakao.com/oauth/authorize?client_id=6f3c77ab7de9709303c41de3dd88db64&redirect_uri=http://localhost:10000/kakao/login&response_type=code">
+                        <a class="login-btn-wrapper"
+                           href="https://kauth.kakao.com/oauth/authorize?client_id=6f3c77ab7de9709303c41de3dd88db64&redirect_uri=http://localhost:10000/kakao/login&response_type=code">
                             <div class="register-button-kakao">
                                 <div class="register-button-icon">
                                     <img data-v-f9bf5e74="" src="https://cdn.comento.kr/icon/icon-kakao-medium.svg"
