--- a/src/main/resources/static/css/header-footer.css
+++ b/src/main/resources/static/css/header-footer.css
@@ -473,6 +473,7 @@ header {
 .header-avatar {
     height: 24px;
     width: 24px;
+    border: 1px solid #e1e4e6;
     display: inline-block;
     position: relative;
     border-radius: 100%;
@@ -551,6 +552,11 @@ header {
     font-weight: 400;
     font-size: 10px;
     line-height: 13px;
+}
+
+.header-detail-profile-img {
+    width: 40px;
+    height: 40px;
 }
 
 .header-popover-devider {
@@ -758,8 +764,8 @@ header {
 }
 
 .profile-img {
-    width: 100%;
-    height: 100%;
+    width: 24px;
+    height: 24px;
 }
 
 .mobile-detail-header-con {
