조남호 - 헤더 사진 수정

--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -146,10 +146,10 @@
                                                     </svg>
                                                 </div>
                                                 <div th:if="${session.member.memberImgName != null}">>
-                                                    <img class="profile-img" th:src="${session.member.memberImgName}">
+                                                    <img class="header-detail-profile-img" th:src="${session.member.memberImgName}">
                                                 </div>
                                                 <div th:if="${session.member.memberKakaoProfileUrl != null and session.member.memberImgName == null}">
-                                                    <img class="profile-img"
+                                                    <img class="header-detail-profile-img"
                                                          th:src="${session.member.memberKakaoProfileUrl}">
                                                 </div>
                                             </div>
