--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -118,8 +118,9 @@
                                             </path>
                                         </svg>
                                     </div>
-                                    <div th:if="${session.member.memberImgName != null}">>
-                                        <img class="profile-img" th:src="${session.member.memberImgName}">
+                                    <div th:if="${session.member.memberImgName != null}">
+                                        <img class="profile-img"
+                                             th:src="@{/file/display(fileName=${session.member.memberImgPath} + '/' + ${session.member.memberImgName})}">
                                     </div>
                                     <div th:if="${session.member.memberKakaoProfileUrl != null and session.member.memberImgName == null}">
                                         <img class="profile-img"
@@ -145,8 +146,9 @@
                                                         </path>
                                                     </svg>
                                                 </div>
-                                                <div th:if="${session.member.memberImgName != null}">>
-                                                    <img class="header-detail-profile-img" th:src="${session.member.memberImgName}">
+                                                <div th:if="${session.member.memberImgName != null}">
+                                                    <img class="header-detail-profile-img"
+                                                         th:src="@{/file/display(fileName=${session.member.memberImgPath} + '/' + ${session.member.memberImgName})}">
                                                 </div>
                                                 <div th:if="${session.member.memberKakaoProfileUrl != null and session.member.memberImgName == null}">
                                                     <img class="header-detail-profile-img"
