페이지네이션 및 서치 추가

--- a/src/main/resources/templates/message/received.html
+++ b/src/main/resources/templates/message/received.html
@@ -100,12 +100,11 @@
                                                 받은 메세지 보관함
                                             </div>
                                             <div>
-                                                <button class="friend-message-btn">
-                                                    <div class="enter-button-icon">쪽지 작성</div>
-                                                </button>
-                                                <!--                                                    <button class="delete-btn">-->
-                                                <!--                                                        <div class="enter-button-icon">삭제</div>-->
-                                                <!--                                                    </button>-->
+                                                <a href="/message/write">
+                                                    <button class="friend-message-btn">
+                                                        <div class="enter-button-icon">쪽지 작성</div>
+                                                    </button>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
