--- a/src/main/resources/templates/message/sent.html
+++ b/src/main/resources/templates/message/sent.html
@@ -100,13 +100,11 @@
                                                 보낸 메세지 보관함
                                             </div>
                                             <div>
-                                                <button class="friend-message-btn">
-                                                    <div class="enter-button-icon">쪽지 작성</div>
-                                                </button>
-                                                <!--                                                    <button class="delete-btn">-->
-                                                <!--                                                        <div class="enter-button-icon"></div> 삭제-->
-                                                <!--                                                        <div class="enter-button-icon"></div>-->
-                                                <!--                                                    </button>-->
+                                                <a href="/message/write">
+                                                    <button class="friend-message-btn">
+                                                        <div class="enter-button-icon">쪽지 작성</div>
+                                                    </button>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
