조남호 - 마이페이지 완성

--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     <div class="banner-right-side-box">
-                        <img src="../../static/images/banner/003.png" alt="">
+                        <img src="/images/banner/003.png" alt="">
                     </div>
                 </div>
             </div>
@@ -600,5 +600,11 @@
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <script src="/js/header-footer.js"></script>
 <script src="/js/banner.js"></script>
+<script>
+    const withdrawCheck = [[${withdraw}]]
 
+    if (withdrawCheck === false) {
+        alert("회원탈퇴가 취소되었습니다. 돌아오신 것을 환영합니다.");
+    }
+</script>
 </html>
