--- a/src/main/resources/templates/member/my-page.html
+++ b/src/main/resources/templates/member/my-page.html
@@ -15,7 +15,6 @@
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
     </style>
-    <link rel="icon" href="/images/favicon.ico">
 
     <!--세션 확인 스크립트-->
     <script th:inline="javascript">
@@ -32,6 +31,28 @@
 
 <body>
 <header th:replace="~{main/header :: header}"></header>
+<div class="modal-background">
+    <div class="modal-container">
+        <div class="modal-header">
+            <h5 id="warning-modal-label" class="modal-title">알림</h5>
+            <button type="button" class="btn-close" data-dismiss="modal" aria-label="닫기">
+                <svg height="18" viewBox="0 0 16 16" width="18" xmlns="http://www.w3.org/2000/svg">
+                    <polygon fill-rule="evenodd"
+                             points="8 9.414 3.707 13.707 2.293 12.293 6.586 8 2.293 3.707 3.707 2.293 8 6.586 12.293 2.293 13.707 3.707 9.414 8 13.707 12.293 12.293 13.707 8 9.414"/>
+                </svg>
+            </button>
+        </div>
+        <div class="modal-body">
+            <div id="modal-alert-message">회원님의 정보가 전부 삭제됩니다<br>정말 탈퇴하시겠습니까?<br><br>(1개월 이내로 다시 로그인 하시면 회원 정보가 유지되며 탈퇴되지
+                않습니다.)
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="modal-btn" data-dismiss="modal" id="modal-alert-confirm">예</button>
+            <button type="button" class="modal-btn" data-dismiss="modal" id="modal-alert-back">아니오</button>
+        </div>
+    </div>
+</div>
 <div class="mypageWrapper">
     <div class="asideMenuContainer">
         <div class="mypageAsideMenu">
@@ -189,7 +210,8 @@
                         닉네임 변경
                     </div>
                     <form th:action="@{/member/update-nickname}" method="post" class="editNicknameBody">
-                        <input type="text" name="memberNickname" class="nicknameBox" th:value="${session.member.memberNickname}">
+                        <input type="text" name="memberNickname" class="nicknameBox"
+                               th:value="${session.member.memberNickname}">
                         <div class="verifyNickname">
                             중복확인
                         </div>
@@ -331,43 +353,44 @@
     $verifyBtn.on("click", async () => {
         const newNickname = $(".nicknameBox").val();
 
-        try {
-            const response = await fetch(`/member/check-nickname?memberNickname=${newNickname}`);
-            const result = await response.json();
+        const response = await fetch(`/member/check-nickname?memberNickname=${newNickname}`);
+        const result = await response.json();
 
-            console.log(result);
+        console.log(result);
 
-            const availableNicknameIndicator = document.getElementById("availableNicknameIndicator");
-            const messageContainer = document.createElement("div");
+        const availableNicknameIndicator = document.getElementById("availableNicknameIndicator");
+        const messageContainer = document.createElement("div");
 
-            const svgIcon = `
+        const svgIcon = `
                 <svg width="12" height="12" viewBox="0 0 12 12" fill="black" xmlns="http://www.w3.org/2000/svg" class="c-application c-icon" style="fill: rgb(42, 125, 225);">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M11 6C11 8.76142 8.76142 11 6 11C3.23858 11 1 8.76142 1 6C1 3.23858 3.23858 1 6 1C8.76142 1 11 3.23858 11 6ZM6 3.25C6.27614 3.25 6.5 3.47386 6.5 3.75V6.25C6.5 6.52614 6.27614 6.75 6 6.75C5.72386 6.75 5.5 6.52614 5.5 6.25V3.75C5.5 3.47386 5.72386 3.25 6 3.25ZM6 8.75C6.41421 8.75 6.75 8.41421 6.75 8C6.75 7.58579 6.41421 7.25 6 7.25C5.58579 7.25 5.25 7.58579 5.25 8C5.25 8.41421 5.58579 8.75 6 8.75Z"></path>
                 </svg>
             `;
 
-            if (result === true) {
-                messageContainer.classList.add("nicknameUpdateMessageContainer");
-                messageContainer.innerHTML = `${svgIcon} 사용 가능한 닉네임입니다.`;
-                availableNicknameIndicator.innerHTML = '';
-                availableNicknameIndicator.appendChild(messageContainer);
+        if (result === true) {
+            messageContainer.classList.add("nicknameUpdateMessageContainer");
+            messageContainer.innerHTML = `${svgIcon} 사용 가능한 닉네임입니다.`;
+            availableNicknameIndicator.innerHTML = '';
+            availableNicknameIndicator.appendChild(messageContainer);
 
-                const $saveNickBtn = $(".saveNickname");
-                $saveNickBtn.removeClass("disable");
-                $saveNickBtn.removeAttr("disabled");
-            } else {
-                messageContainer.classList.add("nicknameUpdateMessageContainer", "error");
-                messageContainer.innerHTML = `${svgIcon} 이미 사용중인 이름입니다.`;
-                availableNicknameIndicator.innerHTML = '';
-                availableNicknameIndicator.appendChild(messageContainer);
+            const $saveNickBtn = $(".saveNickname");
+            $saveNickBtn.removeClass("disable");
+            $saveNickBtn.removeAttr("disabled");
+        } else {
+            messageContainer.classList.add("nicknameUpdateMessageContainer", "error");
+            messageContainer.innerHTML = `${svgIcon} 이미 사용중인 이름입니다.`;
+            availableNicknameIndicator.innerHTML = '';
+            availableNicknameIndicator.appendChild(messageContainer);
 
-                const $saveNickBtn = $(".saveNickname");
-                $saveNickBtn.addClass("disable");
-                $saveNickBtn.attr("disabled", "disabled");
-            }
-        } catch (error) {
-            console.error("오류 발생:", error);
+            const $saveNickBtn = $(".saveNickname");
+            $saveNickBtn.addClass("disable");
+            $saveNickBtn.attr("disabled", "disabled");
         }
+
+    })
+
+    $("#modal-alert-confirm").on("click", function () {
+        window.location.href = '/member/withdraw';
     });
 
 
