--- a/src/main/resources/static/css/member/bookmark.css
+++ b/src/main/resources/static/css/member/bookmark.css
@@ -421,23 +421,18 @@ hr {
     border-radius: 0 0 0 10px;
     top: 0;
     right: 0;
-    padding: 5px 12px;
     overflow: hidden;
-    background: hsla(0, 100%, 62%, 0.678);
 }
 
 .indicator {
-    display: none;
+    display: flex;
     color: #fff;
     font-size: 14px;
     font-weight: 600;
     line-height: 20px;
     width: 100%;
     height: 100%;
-}
-
-.indicator.active {
-    display: flex;
+    padding: 5px 12px;
 }
 
 .community-post-inside-con {
@@ -447,6 +442,10 @@ hr {
     flex-direction: row;
     justify-content: space-between;
     max-width: 100%;
+}
+
+.post-container {
+    width: 100%;
 }
 
 .post-title {
@@ -523,6 +522,14 @@ hr {
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
+}
+
+.time {
+    color: rgb(148, 155, 160);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    margin-right: 12px;
 }
 
 .page-btn-wrap {
