--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -8,6 +8,7 @@
     <link data-n-head="ssr" rel="preload" as="style"
           href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/header-footer.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="icon" href="/images/favicon.ico">
     <style>
@@ -46,11 +47,11 @@
                         </div>
                     </div>
                     <div class="banner-right-side-box">
-                        <img src="../../static/images/banner/003.png" alt="">
+                        <img src="/images/banner/003.png" alt="">
                     </div>
                 </div>
             </div>
-            <div th:onclick="|location.href='@{/meeting-community/posts}'|" class="slide" id="slide1">
+            <div class="slide" id="slide1">
                 <div class="inner-container">
                     <div>
                         <div class="banner-mainfont" style="color: #fff;">
@@ -76,7 +77,7 @@
                     </div>
                 </div>
             </div>
-            <div th:onclick="|location.href='@{/general-community/posts}'|" class="slide" id="slide2">
+            <div class="slide" id="slide2">
                 <div class="inner-container">
                     <div>
                         <div class="banner-mainfont" style="color: #fff;">
@@ -88,11 +89,11 @@
                     </div>
                 </div>
             </div>
-            <div th:onclick="|location.href='@{/meeting-community/write}'|" class="slide" id="slide3">
+            <div class="slide" id="slide3">
                 <div class="inner-container">
                     <div>
                         <div class="banner-mainfont" style="color: #fff;">
-                            글을 작성하고 <br> <span style="color: #77C4FF;"> 친구 </span> 를만나 보세요!
+                            즐거움을 <span style="color: #77C4FF;">함께</span> 나누는<br>모임 게시판
                         </div>
                     </div>
                     <div class="banner-right-side-box">
@@ -104,7 +105,7 @@
                 <div class="inner-container">
                     <div>
                         <div class="banner-mainfont" style="color: #fff;">
-                            뭉치면 더욱 재미 있는<br><span style="color: #77C4FF;">함께해YOUNG</span>
+                            뭉치면 더욱 재미 있는<br><span style="color: #77C4FF;">함께해young</span>
                         </div>
                     </div>
                     <div class="banner-right-side-box">
@@ -157,7 +158,7 @@
                 <div class="mb24"></div>
             </div>
             <div class="cards-container">
-                <div th:onclick="|location.href='@{/general-community/posts}'|" class="card">
+                <div class="card">
                     <div class="card-img-box">
                         <img src="/images/introduce/001.jpg">
                     </div>
@@ -171,7 +172,7 @@
                         </div>
                     </div>
                 </div>
-                <div th:onclick="|location.href='@{/meeting-community/posts}'|" class="card">
+                <div class="card">
                     <div class="card-img-box">
                         <img src="/images/introduce/002.jpg">
                     </div>
@@ -185,7 +186,7 @@
                         </div>
                     </div>
                 </div>
-                <div th:onclick="|location.href='@{/member/my-schedule}'|" class="card">
+                <div class="card">
                     <div class="card-img-box">
                         <img src="/images/introduce/003.jpg">
                     </div>
@@ -208,7 +209,7 @@
             <div class="introduce-container">
                 <div class="main-section-title">일반 게시판에서 지금 만나요</div>
                 <div class="link-btn-container">
-                    <a th:href="@{/general-community/posts}">
+                    <a href="">
                         <button class="link-btn">바로가기</button>
                     </a>
                 </div>
@@ -298,7 +299,7 @@
                             </p>
                         </div>
                     </div>
-                    <button th:onclick="|location.href='@{/general-community/post}'|" class="community-to-more">
+                    <button class="community-to-more">
                         <div>+ 더보기</div>
                     </button>
                 </div>
@@ -388,7 +389,7 @@
                             </p>
                         </div>
                     </div>
-                    <button th:onclick="|location.href='@{/general-community/post}'|" class="community-to-more">
+                    <button class="community-to-more">
                         <div>+ 더보기</div>
                     </button>
                 </div>
@@ -400,7 +401,7 @@
             <div class="introduce-container">
                 <div class="main-section-title">모임 게시판에서 마음에 드는 모임을 찾아보세요</div>
                 <div class="link-btn-container">
-                    <a th:href="@{/meeting-community/posts}">
+                    <a href="">
                         <button class="link-btn">바로가기</button>
                     </a>
                 </div>
@@ -495,7 +496,7 @@
                             </p>
                         </div>
                     </div>
-                    <button th:onclick="|location.href='@{/meeting-community/post}'|" class="community-to-more">
+                    <button class="community-to-more">
                         <div>+ 더보기</div>
                     </button>
                 </div>
@@ -586,7 +587,7 @@
                             </p>
                         </div>
                     </div>
-                    <button th:onclick="|location.href='@{/meeting-community/post}'|" class="community-to-more">
+                    <button class="community-to-more">
                         <div>+ 더보기</div>
                     </button>
                 </div>
@@ -599,5 +600,11 @@
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <script src="/js/header-footer.js"></script>
 <script src="/js/banner.js"></script>
+<script>
+    const withdrawCheck = [[${withdraw}]]
 
+    if (withdrawCheck === false) {
+        alert("회원탈퇴가 취소되었습니다. 돌아오신 것을 환영합니다.");
+    }
+</script>
 </html>
